Correção do X de minha conta

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
 
         .account-modal-content {
             background-color: white;
+            position: relative;
             padding: 20px;
             border-radius: 5px;
             width: 400px;
@@ -267,6 +268,8 @@
         .order-total {
             font-weight: bold;
         }
+
+        
     </style>
 </body>
 </html>
