--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <span class="price">R$ 24,90</span>
                     </div>
                 </div>
-                <div class="product-card" onclick="showProductDetail('Hambúrguer Cheddar', 'sobremesa.jpg', 'Hambúrguer com queijo cheddar e cebola caramelizada', 29.90)">
+                <div class="product-card" onclick="showProductDetail('Hambúrguer Cheddar', 'lanche 5.jpg', 'Hambúrguer com queijo cheddar e cebola caramelizada', 29.90)">
                     <img src="lanche 5.jpg" alt="Hambúrguer Cheddar" class="product-img">
                     <div class="product-info">
                         <h3>Hambúrguer Cheddar</h3>
